[Offline Pages] Adds UMA for number of started attempts and for network connection when Unsupported Scheme error encountered.

These changes are a follow-up to bug 642025 and the patch landed to mitigate it. They are meant to give us more visibility for tuning the policy for max number of started attempts for a request and whether we might use the network connection to better understand the nature of the Unsupported Scheme error.

Also this reduces the max number of start attempts from 5 to 4. I tried 2 EM URLs that took 3 attempts on GIN-2g on GIN-2g-poor and one took only 2 attempts while the other took 4 attempts so I don't want to lower this too much yet (and see what new UMA reveals).

BUG=642923

Review-Url: https://codereview.chromium.org/2301703002
Cr-Commit-Position: refs/heads/master@{#416101}

Former-commit-id: 22647f96af79fb0d563644640689a8fc678f15ac